--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                     Now I learn programming and teach it...<br>
                 </p>
             </div>
-            <a href="/resume" style="left: 300px; top: 180px;" class="btn"> See my Resume </a>
+            <a href="/resume" style="left: 300px; top: 180px;" id="btn"> See my Resume </a>
             <a href="/github" style="left: 240px; top: 200px;  background-image:url('static/github.png');" id="lbtn0" class="lbtn">    </a>
             <a href="/youtube" style="left: 220px; top: 270px;  background-image:url('static/youtube.png');" class="lbtn">  </a>
             <a href="/insta" style="left: 460px; top: 200px;  background-image:url('static/insta.png');" class="lbtn">  </a>  
@@ -21,7 +21,7 @@
         </div>
       
         <img id=pic src="static/me.jpg">
-        <script type="text/javascript" src="{{ url_for('static', filename='static/st.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='/script.js') }}"></script>
 
     </body>
 </html>
