--- a/static/StyleSheets/style.css
+++ b/static/StyleSheets/style.css
@@ -13,12 +13,12 @@ body {
     height: 400px;
     position: relative;
     top: 50px;
-    background: rgba(255, 255, 255,  0.09);
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.5);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(6.5px);
-    -webkit-backdrop-filter: blur(6.5px);
-    border: 1px solid rgba(255, 255, 255, 0.24);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
 }
 
 #pic{
@@ -44,7 +44,7 @@ body {
 
 }
 
-.btn{
+#btn{
     border-style: dotted;
     border-width: 10px;
     border-radius: 50%;
