--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
+        {% include "header.html" %}
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     </head>
-    <body style="background-image: url('static/images/dack3.jpeg')">
+    <body style="background-image: url('static/images/back2.jpeg')">
     
         <div id=main >
             <div id=me>
