--- a/templates/header.html
+++ b/templates/header.html
@@ -7,12 +7,12 @@
 
 <ul>
   <li><a class="active" href="/">Home</a></li>
-  <li><a href="About">About me</a></li>
+  <li><a href="me">About me</a></li>
   <li><a href="News">Posts</a></li>
   <li class="im"><a href="insta"><img class="mg" src="static/images/insta1.png"></a></li>
   <li class="im"> <a href="github"><img class="mg" src="static/images/git1.png"></a></li>
-  <li class="im"><a href="linkedin"><img src="static/images/linkedin1.png"></a></li>
-  <li class="im"><a href="youtube"><img src="static/images/yout1.png"></a></li>
+  <li class="im"><a href="linkedin"><img class="mg" src="static/images/linkedin1.png"></a></li>
+  <li class="im"><a href="youtube"><img class="mg" src="static/images/yout1.png"></a></li>
 
 </ul>
 <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"></script>
