--- a/templates/me.html
+++ b/templates/me.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         {% include "header.html" %}
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/me.css') }}">
     </head>
-    <body style="background-color: rgb(155, 219, 219);">
+    <body style="background-image: url('static/images/back2.jpeg')">
     
         <div id=main >
             <div id=me>
