--- a/templates/index.html
+++ b/templates/index.html
@@ -3,21 +3,21 @@
         {% include "header.html" %}
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     </head>
-    <body style="background-color: rgb(155, 219, 219);">
+    <body style="background-color: rgb(169, 176, 214);">
     
-        <div id=main >
-            <div id=me>
-                <p>
-                    Hi im Fateme<br>
-                    I am 23 years old and live in Mashhad<br>
-                    I have a bachelor's degree in software engineering.<br>
-                    Now I learn programming and teach it...<br>
-                </p>
+        <div id=headerpic style="background-image:url('static/images/back2.jpeg');">
+            <p>
+                    Hi Welcome to my website...!
+            </p>
+            <div class="bar">
+                    
+                <input class="searchbar" type="text" title="Search" placeholder="Can i help you???" >
+                <a>
+                      <img src="static/images/search.png">
+                </a>
             </div>
-            <a href="/resume" style="left: 300px; top: 180px;" id="btn"> See my Resume </a>
+            
         </div>
-      
-        <img id=pic src="{{ url_for('static', filename='images/me.jpg') }}">
         <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"></script>
 
     </body>
