--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
 
 <ul>
   <li><a class="active" href="/">Home</a></li>
-  <li><a href="me">About me</a></li>
+  <li><a href="#sec2">About me</a></li>
   <li><a href="News">Posts</a></li>
   <li class="im"><a href="insta"><img class="mg" src="static/images/insta1.png"></a></li>
   <li class="im"> <a href="github"><img class="mg" src="static/images/git1.png"></a></li>
