--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,32 +1,26 @@
-
-{% block title %} Login {% endblock %}
-
-{% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <div class="card border border-0 shadow p-3 bg-body rounded position-absolute top-50 start-50 translate-middle" style="width: 400px;">
-                <div class="card-body">
-                    <form method="post" action="/admin/login">
-                        <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="email">
-                            <label for="floatingInput">Email address</label>
-                        </div>
-                        <div class="form-floating mb-3">
-                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
-                            <label for="floatingPassword">Password</label>
-                        </div>
-                        <div class="form-check mb-3">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                        </div>
-                        <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-success">Login</button>
-                        </div>
-                    </form>
-                </div>
+<html>
+    <head>
+        
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
+    </head>
+    <body>
+    <div id=main >
+        <h1>LOGIN</h1>
+        <form method="post" action="/admin/login">
+            <div class="box-wrapper" style="padding-top: 150px;">
+                <input value="{{request.form.username }}" class="form-control" type="email" id="inp" placeholder="           Email " name="email">
             </div>
-        </div>
+            <div class="box-wrapper" style="padding-top: 25px;">
+                <input value="{{request.form.password }}" type="password" id="inp" placeholder="           Password" name="password">
+            </div>
+            <div>
+                <input type="checkbox" label="chk" >
+                <label for="chk" id="rem">Check me out</label>
+            </div>
+            <div>
+                <button type="submit" id="signin">Login</button>
+            </div>
+        </form>
     </div>
-</div>
-{% endblock %}
+    </body>
+    </html>
