--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -1,8 +1,8 @@
-{% extends 'admin/template.html' %}
+<html>
+    <head>
 
-{% block dashboard_title %} Dashboard {% endblock %}
-
-{% block dashboard_content %}
+    </head>
+<body>
 <form method="post" action="/login">
     <div class="form-floating mb-3">
         <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="email">
@@ -20,4 +20,5 @@
         <button type="submit" class="btn btn-success">Login</button>
     </div>
 </form>
-{% endblock %}
+</body>
+</html>
