--- a/templates/admin/add_post.html
+++ b/templates/admin/add_post.html
@@ -1,8 +1,8 @@
-{% extends 'admin/template.html' %}
+<html>
+<head>
 
-{% block dashboard_title %} New Post {% endblock %}
-
-{% block dashboard_content %}
+</head>
+<body>
 <h2>New Post</h2>
 <form method="post" action="/admin/blog/add" enctype="multipart/form-data">
     <div class="form-floating mb-3">
@@ -18,4 +18,5 @@
         <button type="submit" class="btn btn-success">Save</button>
     </div>
 </form>
-{% endblock %}
+</body>
+</html>
